tests/ui/wf/wf-in-fn-type-ret.stderr
error[E0277]: the trait bound `T: Copy` is not satisfied
  --> $DIR/wf-in-fn-type-ret.rs:9:16
   |
LL |     x: fn() -> MustBeCopy<T>
   |                ^^^^^^^^^^^^^ the trait `Copy` is not implemented for `T`
   |
note: required by a bound in `MustBeCopy`
  --> $DIR/wf-in-fn-type-ret.rs:3:21
   |
LL | struct MustBeCopy<T:Copy> {
   |                     ^^^^ required by this bound in `MustBeCopy`
help: consider restricting type parameter `T` with trait `Copy`
   |
LL | struct Foo<T: std::marker::Copy> {
   |             +++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
